@@ -111,8 +111,10 @@ class TreeView(gtk.VBox):
         gtk.VBox.__init__(self, spacing=0)
 
         loading_msg_widget = ProgressPanel()
-        if getattr(ui.ui_factory, "set_nested_progress_bar_widget", None) is not None:
-            ui.ui_factory.set_nested_progress_bar_widget(loading_msg_widget.get_progress_bar)
+        # FIXME: Why is the following needed ? Are there really cases where we
+        # use a TreeView without installing our own ui ? --vila 20090610
+        if getattr(ui.ui_factory, "set_progress_bar_widget", None) is not None:
+            ui.ui_factory.set_progress_bar_widget(loading_msg_widget)
         self.pack_start(loading_msg_widget, expand=False, fill=True)
 
         self.scrolled_window = gtk.ScrolledWindow()
